More swagger edits, add in POST path
