# controllers/section_types.js
@@ -26,3 +26,14 @@ exports.getSectionTypes.mock = function (req, res) {
   console.log("Invoked getSectionTypes.mock")
   res.send(req.swagger.root['x-mock_json'].section_types);
 };
+
+exports.createSectionType = function (req, res) {
+  console.log("Invoked createSectionType");
+  exports.createSectionType.mock(req, res);
+};
+
+exports.createSectionType.mock = function (req, res) {
+  console.log("Invoked createSectionType.mock");
+  console.log(JSON.stringify(req.swagger.root['x-mock_json'].section_types.values[0]));
+  res.status(201).send(req.swagger.root['x-mock_json'].section_types.values[0]);
+};
